Try fix overflow-x bug

--- a/css/reset.css
+++ b/css/reset.css
@@ -9,6 +9,7 @@
 }
 html,
 body {
+	width: 100vw;
 	min-height: 100%;
 	overflow-x: hidden;
 }
